
2000-09-20  Johannes Zellner <johannes@zellner.org>

	* relative arrows:
	  set arrow from start_x, start_y rto delta_x, delta_y
	* if front was given, the arrow head stuff wasn't applied.
	  I repaired this. (also for 3d plots).

2000-09-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* graphics.c (map_position), graph3d.c (map_position): Fix
 	off-by-one bug in treatment of term->{x,y}max when translating
 	'screen' coordinates.

2000-08-02  Petr Mikulik <mikulik@physics.muni.cz>
	* src/graph3d.c src/graphics.c src/set.c src/show.c src/term.c
	  src/plot.h docs/gnuplot.doc term/fig.trm:
	allow setting arrow head(s) sizes --- new keywords `heads` and
	`{size <length>,<angle>}` for `set arrow`.
	Note: not implemented for TeX-like terminals, which draw arrows
	by their own method.

2000-07-25  Petr Mikulik <mikulik@physics.muni.cz>

	* src/graphics.c src/plot.c src/plot2d.c src/plot3d.c src/plot.h
	  src/graph3d.c src/os2/gclient.c term/pm.trm term/post.trm:
	avoid writing filenames in keys as enhanced text in enhanced-text
	capable terminals (postscript and Presentation Manager); i.e., don't 
	write file "a_123.dat" with '1' as subscript of 'a'.
	  The method used sets a new flag `this_plot->title_no_enhanced = 1;`
	if the title of filename or function cannot be enhanced. When keys are
	typeset, then new global global variable `ignore_enhanced_text` is set.
	Then enhanced terminals decide whether to use normal-text or
	enhanced-text writing method. 
	  Note: There was another method proposed to solve this problem: all
	escape characters to be backslashed on reading of the title. However,
	this would not work if the same plot is replotted subsequently on
	enhanced and non-enhanced terminals.

2000-07-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d: src/os2/gclient.c, term/pm.trm: bugfix for color palette
	allocation ('set palette maxcolors' was ignored)

2000-07-10  Petr Mikulik  <mikulik@physics.muni.cz>
