@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.23.2.5 2000/09/20 01:25:58 joze Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.23.2.6 2000/10/06 04:14:49 joze Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -646,7 +646,7 @@ int quick;			/* !=0 means plot only axes etc., for quick rotation */
 	}
     }
     /* PLACE LABELS */
-    if ((*t->pointsize)) {
+    if (t->pointsize) {
 	(*t->pointsize)(pointsize);
     }
     for (this_label = first_label; this_label != NULL;
@@ -1063,7 +1063,7 @@ int quick;			/* !=0 means plot only axes etc., for quick rotation */
     draw_bottom_grid(plots, pcount);
 
     /* PLACE LABELS */
-    if ((*t->pointsize)) {
+    if (t->pointsize) {
 	(*t->pointsize)(pointsize);
     }
     for (this_label = first_label; this_label != NULL;
